# oriflamme-simulator

./: .gitignore  README.md  foo.py  oriflamme.py  pyproject.toml  setup.py  test_oriflamme.py
oriflamme/: __init__.py  constant.py  game.py
oriflamme/core/: action.c  action.h  board.c  board.h  card.c  card.h  common.h  deck.c  deck.h  module.c  score.c  score.h  state.c  state.h
src/: CMakeLists.txt  action.c  action.cpp  action.h  card.c  common.h  deck.c  game.cpp  game.h  kind.c  kind.h  main.cpp  module.c  print.h  stack.c  stack.h  state.c  state.cpp  state.h
src/oriflamme/: __init__.py
tests/: test_basic.py  test_oriflamme.py
