[tool.poetry]
name = "oriflamme"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
    "Johan Berdat <jojolebarjos@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/jojolebarjos/oriflamme-simulator"
packages = [{include = "oriflamme", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jojolebarjos/oriflamme-simulator/issues"

[tool.black]
line-length = 88

[tool.pylint]
max-line-length = 88
disable = [
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0511", # (fixme)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
